--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     }
   ],
   "dependencies": {
+    "colors": "^1.1.2",
     "httpdispatcher": "^0.4.0",
     "localtunnel": "^1.7.0",
     "websocket": "^1.0.22"
